fix: list sort & horizontal scroll

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,14 @@
 html {
     background-color: #FAFBFB;
+    overflow-x: hidden;
+    max-width: 100vw;
 }
+
+body {
+    overflow-x: hidden;
+    max-width: 100vw;
+}
+
 .App {
     font-family: 'DM Sans', sans-serif;
     background-color: #FAFBFB;
@@ -8,6 +16,7 @@ html {
     line-height: 1.5;
     font-weight: 400;
 }
+
 ::-webkit-scrollbar {
     display: none;
     }
