--- a/src/components/BalanceModule/BalanceModule.scss
+++ b/src/components/BalanceModule/BalanceModule.scss
@@ -2,23 +2,26 @@
     border-radius: 20px;
     background-color: white;
     box-shadow: 1px 1px 15px 0px rgba(0,0,0,0.1);
-    
     margin: 1rem;
     width: 96%;
     max-height: 11.1rem;
     display: flex;
     flex-direction: column;
+    
 
     .balance-title{
         position: absolute;
         display: flex;
         align-items: center;
         padding: 2.5rem;
+        
     }
 
     .chart-div{
         width: 100%;
         height: 100%;
+        margin-right: -10rem;
+        margin-left: -1.28rem;
     }
 
     h3 {
