--- a/src/components/Goals/GProgress/GProgress.scss
+++ b/src/components/Goals/GProgress/GProgress.scss
@@ -4,10 +4,9 @@
     box-shadow: 1px 1px 15px 0px rgba(0,0,0,0.1);
     margin: 1rem;
     width: 97%;
-    max-height: 11.1rem;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-around;
     align-items: center;
     flex-direction: row;
-    padding: 2rem;
+    padding: 3rem;
 }
